[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "fc-consensus"
repository = "https://github.com/paritytech/frontier/"
version = "2.0.0-dev"

[dependencies]
async-trait = "0.1"
codec = {package = "parity-scale-codec", version = "2.0.0", features = ["derive"]}
derive_more = "0.99.2"
fc-db = {version = "2.0.0-dev", path = "../db"}
fp-consensus = {version = "2.0.0-dev", path = "../../primitives/consensus"}
fp-rpc = {version = "3.0.0-dev", path = "../../primitives/rpc"}
futures = {version = "0.3.17", features = ["compat"]}
log = "0.4.8"
prometheus-endpoint = {version = "0.9.0", package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate"}
sc-client-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sc-consensus = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-block-builder = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-blockchain = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-consensus = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-core = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-inherents = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-runtime = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-timestamp = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
