[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier database backend"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "fc-db"
repository = "https://github.com/paritytech/frontier/"
version = "2.0.0-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", features = ["derive"]}
fp-storage = {version = "2.0.0-dev", path = "../../primitives/storage"}
kvdb = "0.10.0"
kvdb-rocksdb = "0.14.0"
parking_lot = "0.11.1"
sp-core = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-database = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-runtime = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
