[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Mapping sync logic for Frontier."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "fc-mapping-sync"
version = "2.0.0-dev"

[dependencies]
fc-consensus = {version = "2.0.0-dev", path = "../consensus"}
fc-db = {version = "2.0.0-dev", path = "../db"}
fp-consensus = {version = "2.0.0-dev", path = "../../primitives/consensus"}
fp-rpc = {version = "3.0.0-dev", path = "../../primitives/rpc"}
futures = {version = "0.3.1", features = ["compat"]}
futures-timer = "3.0.1"
log = "0.4.8"
sc-client-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-blockchain = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-runtime = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
