[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Ethereum RPC (web3) compatibility layer for Substrate."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "fc-rpc"
version = "2.0.0-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0"}
ethereum = {version = "0.11.1", features = ["with-codec"]}
ethereum-types = "0.12"
evm = "0.33.1"
fc-consensus = {version = "2.0.0-dev", path = "../consensus"}
fc-db = {version = "2.0.0-dev", path = "../db"}
fc-rpc-core = {version = "1.1.0-dev", path = "../rpc-core"}
fp-consensus = {version = "2.0.0-dev", path = "../../primitives/consensus"}
fp-evm = {version = "3.0.0-dev", path = "../../primitives/evm"}
fp-rpc = {version = "3.0.0-dev", path = "../../primitives/rpc"}
fp-storage = {version = "2.0.0-dev", path = "../../primitives/storage"}
futures = {version = "0.3.1", features = ["compat"]}
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-pubsub = "18.0"
libsecp256k1 = "0.3"
log = "0.4.8"
lru = "0.6.6"
parking_lot = "0.11.1"
rand = "0.7"
rlp = "0.5"
rustc-hex = {version = "2.1.0", default-features = false}
sc-client-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sc-network = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sc-rpc = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sc-service = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "67f28cdba85c362da17909c69c19952e3ef931c7"}
sc-transaction-pool = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sc-transaction-pool-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sha3 = "0.8"
sp-api = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-block-builder = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-blockchain = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-io = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-runtime = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-storage = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-transaction-pool = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
tokio = {version = "1.14", features = ["sync"]}

[features]
rpc_binary_search_estimate = []
