[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "EIP-1559 fee utils"
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "pallet-base-fee"
repository = "https://github.com/paritytech/frontier/"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
pallet-evm = {path = "../evm", default-features = false}
scale-info = {version = "1.0.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true}
sp-core = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-runtime = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}

[dev-dependencies]
sp-io = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate"}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "sp-core/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-evm/std",
  "scale-info/std",
]
