[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Dynamic fee handling for EVM."
edition = "2018"
license = "Apache-2.0"
name = "pallet-dynamic-fee"
version = "4.0.0-dev"

[dependencies]
async-trait = "0.1"
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
pallet-evm = {path = "../evm", version = "6.0.0-dev", default-features = false}
scale-info = {version = "1.0.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true}
sp-core = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-inherents = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-runtime = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-std = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}

[dev-dependencies]
pallet-timestamp = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-io = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate"}

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-inherents/std",
  "frame-system/std",
  "frame-support/std",
  "pallet-evm/std",
  "scale-info/std",
]
