[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for Frontier consensus"
edition = "2018"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "fp-consensus"
repository = "https://github.com/paritytech/frontier/"
version = "2.0.0-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
ethereum = {version = "0.11.1", default-features = false, features = ["with-codec"]}
rlp = {version = "0.5", default-features = false}
sha3 = {version = "0.8", default-features = false}
sp-core = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-runtime = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}
sp-std = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", tag = "devhub/latest"}

[features]
default = ["std"]
std = [
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "codec/std",
  "ethereum/std",
  "rlp/std",
  "sha3/std",
]
