[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitive Ethereum abstractions for Substrate."
documentation = "https://docs.rs/fp-ethereum"
edition = "2018"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "fp-self-contained"
repository = "https://github.com/paritytech/frontier/"
version = "1.0.0-dev"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
ethereum = {version = "0.11.1", default-features = false, features = ["with-codec"]}
frame-support = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, tag = "devhub/latest"}
parity-util-mem = {version = "0.10", optional = true}
scale-info = {version = "1.0.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true, features = ["derive"]}
sha3 = {version = "0.8", default-features = false}
sp-core = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, tag = "devhub/latest"}
sp-io = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, tag = "devhub/latest"}
sp-runtime = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, tag = "devhub/latest"}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "ethereum/std",
  "sp-core/std",
  "sp-runtime/std",
  "scale-info/std",
  "parity-util-mem",
  "sha3/std",
  "frame-support/std",
]
